Fixing bg visibility

--- a/csci340/labs/lab2/style.css
+++ b/csci340/labs/lab2/style.css
@@ -16,6 +16,7 @@ header .row {
 
 .section-1{
   background-image: url("https://static.soundsandcolours.com/2016/10/south-american-casinos.jpg");
+  backface-visibility: visible;
 }
 
 h2{
